# mkvp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
arduino/: 4 led.fzz  hc-05-serial.fzz  sensor_gas.fzz
arduino/blink_led/: blink_led.ino
arduino/button_led/: button_led.ino
arduino/buzzer/: buzzer.ino
arduino/distance/: distance.fzz  led-rgb-distance.ino
arduino/fade_led/: fade_led.ino
arduino/humidity/: humidity-dht11.ino
arduino/ir/: ir.fzz  ir.ino
arduino/led-rgb/: led-rgb.fzz  led-rgb.ino
arduino/led-rgb-distance/: sketch_feb1a.ino
arduino/photoresistance-lm393/: photoresistance-lm393.ino
arduino/photoresistance-lm393-cpp/: arduino.hpp  photoresistance-lm393-cpp.ino
arduino/photoresistance-lm393-interrupt/: photoresistance-lm393-interrupt.ino
arduino/pir-buzzer/: pir-buzzer.ino  pitches.h
arduino/pir-interrupt/: PIR_Sensor_With_LED.ino  pir-interrupt.ino
arduino/segment-cpp/: arduino.hpp  segment-cpp.ino  segment-cpp.sln  segment-cpp.vcxproj  segment-cpp.vcxproj.filters  test.h
arduino/serial_repeat/: serial_repeat.ino
arduino/theremin/: clamp.hpp  theremin.ino
arduino/toneAC_demo/: toneAC_demo.ino
arduino/tutorial_tone/: array.hpp  pair.hpp  pitches.h  tutorial_tone.ino
include/algo/: for_all_pairs.hpp  heap_sort.hpp  insertion_sort.hpp  merge_sort.hpp  selection_sort.hpp
include/algorithm/: for_each_adjacent.hpp  heap_sort.hpp  insertion_sort.hpp  maximum_subset_product.hpp  (+4 more)
tests/: CMakeLists.txt
tests/iterator/: CMakeLists.txt  counting_iterator_test.cpp
tests/utility/: CMakeLists.txt  hysteresis_test.cpp
(+16 files in other folders)
